--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,8 @@
 asgiref==3.9.0
 Django==5.2.4
+django-environ==0.12.0
 sqlparse==0.5.3
+cloudinary==1.44.1
+cloudinary==1.44.1
+django-cloudinary-storage==0.3.0
+psycopg2-binary==2.9.10
